--- a/pom.xml
+++ b/pom.xml
@@ -3,12 +3,11 @@
   <modelVersion>4.0.0</modelVersion>
 
   <groupId>com.gamerevision.rusty.realityshard</groupId>
-  <artifactId>shardlet</artifactId>
+  <artifactId>reality-shard</artifactId>
   <version>0.0.1-SNAPSHOT</version>
   <packaging>jar</packaging>
 
-  <name>shardlet</name>
-  <url>http://maven.apache.org</url>
+  <name>RealityShard</name>
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -22,4 +21,5 @@
       <scope>test</scope>
     </dependency>
   </dependencies>
+  <description>RealityShard aims to create a generic online-game-server, based on the javax.servlet design.</description>
 </project>
