maven restructure, now api and container have their own project, also added some new git exceptions to gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,13 @@
 #files
-/.directory
-/.project
+*~
+*.class
+*.DS_Store
+*.lock
+*.out
+*.swp
+.directory
+.project
 
 #dirs
-.settings/*
-target/*
+*/.settings/*
+*/target/*
