--- a/container/pom.xml
+++ b/container/pom.xml
@@ -18,11 +18,34 @@
     
     
     <dependencies>
+        <!--the Shardlet API-->
         <dependency>
             <groupId>com.gamerevision.rusty.realityshard</groupId>
             <artifactId>shardlet</artifactId>
             <version>${project.version}</version>
             <type>jar</type>
+        </dependency>
+        
+        <!-- LOGBack for logging -->
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-api</artifactId>
+            <version>1.6.4</version>
+        </dependency>
+        <dependency>
+            <groupId>ch.qos.logback</groupId>
+            <artifactId>logback-core</artifactId>
+            <version>1.0.0</version>
+        </dependency>
+        <dependency>
+            <groupId>ch.qos.logback</groupId>
+            <artifactId>logback-classic</artifactId>
+            <version>1.0.0</version>
+        </dependency>
+        <dependency>
+            <groupId>org.codehaus.groovy</groupId>
+            <artifactId>groovy</artifactId>
+            <version>1.8.3</version>
         </dependency>
     </dependencies>
     
