added jaxb project, added depolyment-descriptor schema (auto generated)

--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,7 @@
     
     <modules>
         <module>shardlet</module>
+        <module>schemas</module>
         <module>container</module>
     </modules>
 
