added: server-config schema, new projects (host, network) host ist the new host application that creates the container and network manager, network is the network manager.

--- a/pom.xml
+++ b/pom.xml
@@ -21,7 +21,9 @@
     <modules>
         <module>shardlet</module>
         <module>schemas</module>
+        <module>network</module>
         <module>container</module>
+        <module>host</module>
     </modules>
 
 
