deleted internal event aggregator (no use for the pattern here), added some more functionality and ugly code (there has been quite a lot of the ugly code lately)

--- a/container/pom.xml
+++ b/container/pom.xml
@@ -26,6 +26,14 @@
             <type>jar</type>
         </dependency>
         
+        <!--the Network API-->
+        <dependency>
+            <groupId>com.gamerevision.rusty.realityshard</groupId>
+            <artifactId>network</artifactId>
+            <version>${project.version}</version>
+            <type>jar</type>
+        </dependency>
+        
         <!--the jaxb xsd schemas-->
         <dependency>
             <groupId>com.gamerevision.rusty.realityshard</groupId>
