--- a/host/pom.xml
+++ b/host/pom.xml
@@ -10,7 +10,7 @@
     <parent>
         <groupId>com.realityshard</groupId>
         <artifactId>reality-shard</artifactId>
-        <version>0.1.0_RC1-SNAPSHOT</version>
+        <version>0.1.0_RC2</version>
     </parent>
 
 
