--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.realityshard</groupId>
     <artifactId>reality-shard</artifactId>
-    <version>0.1.0_RC1-SNAPSHOT</version>
+    <version>0.1.0_RC2</version>
     <packaging>pom</packaging>
     <name>${project.artifactId}</name>
     
