Implemented API changes

--- a/host/pom.xml
+++ b/host/pom.xml
@@ -10,7 +10,7 @@
     <parent>
         <groupId>com.realityshard</groupId>
         <artifactId>reality-shard</artifactId>
-        <version>0.1.0_RC2</version>
+        <version>0.1.1</version>
     </parent>
 
 
@@ -18,6 +18,14 @@
     
     
     <dependencies>
+        <!--the Shardlet API-->
+        <dependency>
+            <groupId>com.realityshard</groupId>
+            <artifactId>shardlet</artifactId>
+            <version>${project.version}</version>
+            <type>jar</type>
+        </dependency>
+        
         <!--the network manager-->
         <dependency>
             <groupId>com.realityshard</groupId>
