--- a/pom.xml
+++ b/pom.xml
@@ -4,12 +4,12 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.realityshard</groupId>
     <artifactId>reality-shard</artifactId>
-    <version>0.1.0_RC2</version>
+    <version>0.1.1</version>
     <packaging>pom</packaging>
     <name>${project.artifactId}</name>
     
     
-    <description>Reality:Shard is a generic online-game server container based on javax.servlet that comes with its own servlet-styled API.</description>
+    <description>Reality:Shard is a container for online game-servers that comes with a javax.servlets styled API and an Attribute/Behaviour based Entity-System.</description>
     <url>http://github.com/rusty-gr/Reality-Shard</url>
     <inceptionYear>2012</inceptionYear>
     <organization>
@@ -20,10 +20,12 @@
     
     <modules>
         <module>shardlet</module>
+        <module>entitysystem</module>
         <module>schemas</module>
         <module>network</module>
         <module>container</module>
         <module>host</module>
+        <module>entitysystem</module>
     </modules>
 
 
